--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,12 +2,12 @@
   <h1>Balcão UFF</h1>
   <form (ngSubmit)="onLogin()">
     <div class="form-group">
-      <label for="email">E-mail:</label>
+      <label for="email">E-mail:</label><br>
       <input type="email" id="email" name="email" placeholder="Digite seu email" />
     </div>
 
     <div class="form-group">
-      <label for="password">Senha:</label>
+      <label for="password">Senha:</label><br>
       <input type="password" id="password" name="password" placeholder="Digite sua senha" />
     </div>
 
