--- a/frontend/src/app/myProfile/myProfile.component.html
+++ b/frontend/src/app/myProfile/myProfile.component.html
@@ -1,3 +1,69 @@
-<p>
-  myProfile works!
-</p>
+<div [style]="carregando">
+  <mat-card class="card-container">
+    <mat-grid-list cols="12" rowHeight="150px" gutterSize="10px">
+
+      <mat-grid-tile colspan="4" rowspan="2">
+        <div class="profile-card" (click)="alert()">
+          <div class="image-container">
+            <img src="https://tecoapple.com/wp-content/uploads/2019/05/clairobagsa019.jpg" alt="Foto do usuário" class="profile-image"/>
+          </div>
+        </div>
+      </mat-grid-tile>
+
+      <mat-grid-tile colspan="8">
+        <div class="profile-header-container">
+          <h1 class="profile-header">{{nomeUsuario}}</h1>
+          <div class="star-rating">
+            <mat-icon *ngFor="let star of stars; let i = index">star</mat-icon>&nbsp;&nbsp;<span style="font-size:20px">{{rating}}</span>
+          </div>
+        </div>
+      </mat-grid-tile>
+
+      <mat-grid-tile colspan="8">
+        <div style="width: 100%!important;">
+          <ul class="profile-info">
+            <li>Endereço</li>
+            <li>Data de cadastro</li>
+            <li>Informações</li>
+            <li>Idade</li>
+          </ul>
+        </div>
+      </mat-grid-tile>
+
+    </mat-grid-list>
+
+    <mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
+      <mat-grid-tile colspan="12">
+        <h1>{{visit ? 'Anúncios' : 'Meus Anúncios'}}
+        </h1>
+      </mat-grid-tile>
+    </mat-grid-list>
+
+    <!-- Carrossel -->
+    <div class="carousel-container">
+      <div class="carousel">
+        <div class="carousel-item" *ngFor="let item of anuncios; let i = index">
+          <mat-card class="example-card" appearance="outlined" (click)="abreAnuncio()">
+            <mat-card-header>
+              <div mat-card-avatar class="example-header-image"></div>
+              <mat-card-title>{{ item.title }}</mat-card-title>
+              <mat-card-subtitle>{{ item.subtitle }}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image [src]="item.image" alt="Imagem do anúncio">
+            <mat-card-content class="description-content">
+              <p>{{ item.description }}</p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+        </div>
+      </div>
+      <!-- Setas de Navegação -->
+      <button class="carousel-button left" (click)="moveLeft()">&#10094;</button>
+      <button class="carousel-button right" (click)="moveRight()">&#10095;</button>
+    </div>
+
+  </mat-card>
+</div>
