--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -22,13 +22,13 @@ input::-webkit-inner-spin-button {
     background-color: green!important;
     color: white !important;;
   }
-  
+
   .textoInvalido{
     font-size: 12px;
     background-color: red!important;
     color: white !important;;
   }
-  
+
   .textoCadastro{
     font-size: 12px;
     background-color: rgb(0, 78, 114)!important;
@@ -39,7 +39,7 @@ input::-webkit-inner-spin-button {
     position: absolute;
     right: 5px;
   }
-  
+
   .ajusteEsquerda{
     position: absolute;
     left: 5px;
@@ -48,7 +48,7 @@ input::-webkit-inner-spin-button {
   mat-error{
     font-size: 10px;
   }
-  
+
 .cardCampos{
     max-width: 1000px;
     margin: auto!important;
@@ -112,3 +112,22 @@ input::-webkit-inner-spin-button {
   height: 35px!important;
   background-color: black!important;
 }
+
+/* Aplica a personalização da barra de rolagem */
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+/*****************************/
