--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -20,7 +20,7 @@
 
         <mat-grid-tile colspan="12">
           <mat-form-field floatLabel="always" appearance="outline" hideRequiredMarker="true">
-            <mat-label>Login</mat-label>
+            <mat-label>E-mail</mat-label>
             <div class="email-wrapper">
               <input matInput formControlName="login" type="text">
             </div>
