--- a/frontend/src/app/navegacao/navegacao.component.html
+++ b/frontend/src/app/navegacao/navegacao.component.html
@@ -36,7 +36,7 @@
       <div *ngIf="!isExpanded && !isShowing" style="height:50px">
       </div>
 
-      <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
+      <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent" routerLink="/meusAnuncios">
         <mat-icon mat-list-icon class="ajusteTexto">ads_click</mat-icon>
 				<span class="full-width" *ngIf="isExpanded || isShowing">&nbsp;&nbsp;Meus anuncios</span>
 			</mat-list-item>
@@ -60,9 +60,9 @@
       <div *ngIf="!isExpanded && !isShowing" style="height:50px">
       </div>
 
-      <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
+      <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent" (click)="logoff()">
         <mat-icon mat-list-icon class="ajusteTexto">logout</mat-icon>
-				<span class="full-width" *ngIf="isExpanded || isShowing">&nbsp;&nbsp;Sair</span>
+				<span class="full-width" *ngIf="isExpanded || isShowing" (click)="logoff()">&nbsp;&nbsp;Sair</span>
 			</mat-list-item>
 
       <br><br>
