--- a/frontend/src/app/homePage/homePage.component.css
+++ b/frontend/src/app/homePage/homePage.component.css
@@ -1,3 +1,51 @@
+.title{
+  color: #2e2e2e;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+}
+
+.bt{
+  margin: 20px;
+  height: 30px; width: 100px;
+  border: solid 1px blue;
+  border-radius: 10px;
+  background-color: white;
+  color: blue;
+  transition: background-color 0.5s ease, color 0.5s ease, transform 
+} .bt:hover{
+  background-color: blue;
+  color: white;
+  transform: scale(1.2)
+}
+
+.bt-like{
+  height: 30px; width: 60px;
+  border-radius: 7px; border: solid 0.5px #cecece;
+  padding: 2px;
+  margin: 5px;
+  color: #2e2e2e;
+  transition: background-color 0.5s ease, color 0.5s ease, transform 
+} .bt-like:hover{
+  background-color: rgb(35, 161, 62);
+  color: white;
+  font-weight: bold;
+  transform: scale(1.2)
+}
+
+.bt-share{
+  height: 30px;
+  width: 60px;
+  border-radius: 7px; border: solid 0.5px #cecece;
+  padding: 2px;
+  margin: 5px;
+  color: #2e2e2e;
+  transition: background-color 0.5s ease, color 0.5s ease, transform 
+} .bt-share:hover{
+  background-color:#2e2e2e;
+  color: white;
+  font-weight: bold;
+  transform: scale(1.2)
+}
 
 
 .botao-transacoes{
@@ -22,9 +70,11 @@
 
 .example-card {
   max-width: 350px;
+  padding: 20px;
 }
 
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
+  padding: 5px;
 }
