--- a/frontend/src/app/myAdds/myAdds.component.html
+++ b/frontend/src/app/myAdds/myAdds.component.html
@@ -1,9 +1,9 @@
-<mat-card class="card-container" style="background-color: red;">
+<mat-card class="card-container">
 
 
     <mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
       <mat-grid-tile colspan="12">
-        <h1>{{'Meus Anúncios'}}
+        <h1 class="title">{{'Meus Anúncios'}}
         </h1>
       </mat-grid-tile>
 
@@ -17,7 +17,7 @@
 
       <mat-grid-list cols="12" rowHeight="480px" gutterSize="20px">
         <mat-grid-tile colspan="12">
-          <h1>{{'Voce ainda nao possui anuncios!'}}
+          <h1 class="message">{{'Voce ainda nao possui anuncios!'}}
           </h1>
         </mat-grid-tile>
       </mat-grid-list>
