--- a/frontend/src/app/homePage/homePage.component.css
+++ b/frontend/src/app/homePage/homePage.component.css
@@ -1,8 +1,11 @@
-.title{
-  color: #2e2e2e;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: bold;
+.title {
+  color: black; /* Cor do texto */
+  font-family: 'Roboto', Arial, sans-serif; /* Fonte profissional e moderna */
+  font-weight: 600; /* Peso moderado para uma aparência mais equilibrada */
+  font-size: 60px; /* Tamanho maior para maior impacto */
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.6); /* Borda branca suave */
 }
+
 
 .bt{
   margin: 20px;
@@ -11,7 +14,7 @@
   border-radius: 10px;
   background-color: white;
   color: blue;
-  transition: background-color 0.5s ease, color 0.5s ease, transform 
+  transition: background-color 0.5s ease, color 0.5s ease, transform
 } .bt:hover{
   background-color: blue;
   color: white;
@@ -19,12 +22,13 @@
 }
 
 .bt-like{
-  height: 30px; width: 60px;
+  height: 30px; width: 90px;
   border-radius: 7px; border: solid 0.5px #cecece;
   padding: 2px;
   margin: 5px;
-  color: #2e2e2e;
-  transition: background-color 0.5s ease, color 0.5s ease, transform 
+  background-color: rgb(83, 162, 100);
+  color: #ffffff;
+  transition: background-color 0.5s ease, color 0.5s ease, transform
 } .bt-like:hover{
   background-color: rgb(35, 161, 62);
   color: white;
@@ -34,14 +38,15 @@
 
 .bt-share{
   height: 30px;
-  width: 60px;
+  width: 120px;
   border-radius: 7px; border: solid 0.5px #cecece;
   padding: 2px;
   margin: 5px;
-  color: #2e2e2e;
-  transition: background-color 0.5s ease, color 0.5s ease, transform 
+  color: #ffffff;
+  background-color:#467186;
+  transition: background-color 0.5s ease, color 0.5s ease, transform
 } .bt-share:hover{
-  background-color:#2e2e2e;
+  background-color:#01557f;
   color: white;
   font-weight: bold;
   transform: scale(1.2)
@@ -69,12 +74,33 @@
 }
 
 .example-card {
-  max-width: 350px;
-  padding: 20px;
+  width: 410px;
+  border: 1px solid black;
 }
 
 .example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
   padding: 5px;
+  border: 1px solid white;
+}
+
+.cardAnuncio {
+  width: 409px;  /* Garante que o card ocupe 100% do tamanho da célula */
+  height: 352px; /* Garante que o card ocupe 100% da altura da célula */
+  background-size: cover;  /* Se houver uma imagem de fundo, ela será redimensionada para cobrir todo o card */
+  padding: 0;  /* Remove qualquer padding indesejado */
+  border: 1px solid rgb(0, 0, 0);
+}
+
+/* Ajuste específico para a imagem dentro do mat-card */
+.cardAnuncio img {
+  width: 100%;      /* A imagem vai ocupar toda a largura do card */
+  height: 100%;     /* A imagem vai ocupar toda a altura do card */
+}
+
+.cardCampos2{
+  max-width: 2000px;
+  margin: auto!important;
+  margin-top: 20px!important;
+  margin-bottom: 20px!important;
 }
