--- a/frontend/src/app/homePage/homePage.component.html
+++ b/frontend/src/app/homePage/homePage.component.html
@@ -1,61 +1,122 @@
-<mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
-  <mat-grid-tile colspan="12">
-    <h1 class="title">Balcão UFF</h1>
-  </mat-grid-tile>
-</mat-grid-list>
-
-<!-- não sei para que este botão serve -->
-<button class="bt" (click)="adicionaImagem()">add imagem</button>
-
-<mat-grid-list cols="12" rowHeight="600px" gutterSize="20px">
-<div *ngFor="let item of anuncios">
-
-    <mat-grid-tile [colspan]='coluna'>
-      <mat-card class="example-card" appearance="outlined">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image" (click)="abrePerfil()"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" (click)="abreAnuncio()">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button class="bt-like">LIKE</button>
-          <button class="bt-share">SHARE</button>
-        </mat-card-actions>
-      </mat-card>
+<div style="background-image: url('/assets/wallpaper2.jpg'); background-size: 50% auto; background-repeat: repeat;">
+  <mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
+    <mat-grid-tile colspan="12">
+      <h1 class="title">Balcão UFF</h1>
     </mat-grid-tile>
+  </mat-grid-list>
 
-    <mat-grid-tile [colspan]='coluna'>
-      <mat-card class="example-card" appearance="outlined">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image" (click)="abrePerfil()"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" (click)="abreAnuncio()">
+    <form [formGroup]="pesquisa">
+
+      <mat-card class="cardCampos2">
+
         <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button class="bt-like">LIKE</button>
-          <button class="bt-share">SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-    </mat-grid-tile>
+          <mat-grid-list cols="12" rowHeight="120px" gutterSize="10px">
 
-    
+            <mat-grid-tile colspan="2">
+              <mat-form-field floatLabel="always" appearance="outline" class="namebox" hideRequiredMarker="true">
+                <mat-label>Status</mat-label>
+                <mat-select formControlName="status" >
+                  <mat-option *ngFor="let status of status" [value]="status"> {{ status }} </mat-option>
+                </mat-select>
+                <mat-error>Preencha o campo.</mat-error>
+              </mat-form-field>
+            </mat-grid-tile>
+
+            <mat-grid-tile colspan="2">
+              <mat-form-field floatLabel="always" appearance="outline" class="namebox" hideRequiredMarker="true">
+                <mat-label>Categoria</mat-label>
+                <mat-select  formControlName="categoria" >
+                  <mat-option *ngFor="let categoria of categoria$ | async" [value]="categoria.id_categoria"> {{ categoria.nome }} </mat-option>
+                </mat-select>
+                <mat-error>Preencha o campo.</mat-error>
+              </mat-form-field>
+            </mat-grid-tile>
+
+            <mat-grid-tile colspan="3">
+              <mat-form-field floatLabel="always" appearance="outline" class="namebox" hideRequiredMarker="true">
+                <mat-label>Localização</mat-label>
+                <mat-select  formControlName="localizacao" >
+                  <mat-option *ngFor="let localizacao of localizacao$ | async" [value]="localizacao.id_localizacao"> {{ localizacao.estado }} - {{localizacao.cidade}} {{localizacao.bairro}}</mat-option>
+                </mat-select>
+                <mat-error>Preencha o campo.</mat-error>
+              </mat-form-field>
+            </mat-grid-tile>
+
+            <mat-grid-tile colspan="2">
+              <mat-form-field floatLabel="always" appearance="outline" class="namebox" hideRequiredMarker="true">
+                <mat-label>Preço Minimo</mat-label>
+                  <input matInput formControlName="precoMin">
+                <mat-error>Preencha o campo.</mat-error>
+              </mat-form-field>
+            </mat-grid-tile>
+
+            <mat-grid-tile colspan="2">
+              <mat-form-field floatLabel="always" appearance="outline" class="namebox" hideRequiredMarker="true">
+                <mat-label>Preço Maximo</mat-label>
+                  <input matInput formControlName="precoMax">
+                <mat-error>Preencha o campo.</mat-error>
+              </mat-form-field>
+            </mat-grid-tile>
+
+
+          </mat-grid-list>
+
+
+        <mat-grid-list cols="12" rowHeight="40px" gutterSize="5px">
+          <mat-grid-tile colspan="12">
+            <div class="ajustetxte">
+              <button mat-raised-button (click)="pesquisar()" class="botao-pesquisar">
+                <mat-icon>search</mat-icon>
+                Pesquisar
+            </button>
+            <button mat-raised-button (click)="resetar()" class="botao-limpaFiltro">
+              <mat-icon>search_off</mat-icon>
+              Remover Filtros
+            </button>
+            </div>
+          </mat-grid-tile>
+        </mat-grid-list>
+        </mat-card-content>
+
+      </mat-card>
+
+  </form>
+
+  <mat-grid-list cols="12" rowHeight="600px" gutterSize="20px">
+  <div *ngFor="let item of anunciosFiltered">
+
+      <mat-grid-tile [colspan]='coluna'>
+        <mat-card class="example-card" appearance="outlined">
+          <mat-card-header style="background-color: black; color: white">
+            <div mat-card-avatar class="example-header-image" [ngStyle]="{'background-image': 'url(' + retornaFotoAnunciante(item.anunciante.foto_de_perfil) + ')'}" (click)="abrePerfil(item.anunciante)"></div>
+            <mat-card-title style="color: white">{{item.tipo}}</mat-card-title>
+            <mat-card-subtitle style="color: white">{{item.categoria.nome}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image class="cardAnuncio" [src]="imagemExibida(item.foto)" alt="Photo of a Shiba Inu" (click)="abreAnuncio(item)">
+          <mat-card-content style="height: 100px;">
+            <p>
+              R$ {{item.preco}} - {{item.descricao}}
+            </p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button class="bt-like">Comprar</button>
+            <button class="bt-share" (click)="enviarMensagem(item.anunciante.email)">Mensagem</button>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
+
+
+  </div>
+
+  <div *ngIf="anunciosFiltered.length == 0">
+    <mat-grid-list cols="12" rowHeight="300px">
+      <mat-grid-tile colspan="12">
+        <h2 class="title">Não há anúncios disponíveis!</h2>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+
+  </mat-grid-list>
 </div>
-</mat-grid-list>
 
 
