--- a/frontend/src/app/myProfile/myProfile.component.html
+++ b/frontend/src/app/myProfile/myProfile.component.html
@@ -5,8 +5,8 @@
       <mat-grid-tile colspan="4" rowspan="2">
         <div class="profile-card">
           <div class="image-container">
-            <img src="https://tecoapple.com/wp-content/uploads/2019/05/clairobagsa019.jpg" alt="Foto do usuário" class="profile-image"/>
-            <div class="overlay" (click)="editarPerfil()" *ngIf="!visit">
+            <img [src]="retornaFoto(anunciante.foto_de_perfil)" alt="Foto do usuário" class="profile-image"/>
+            <div class="overlay" (click)="editarPerfil(anunciante.id)" *ngIf="!visit">
               <span class="edit-text">Editar perfil</span>
             </div>
           </div>
@@ -15,7 +15,7 @@
 
       <mat-grid-tile colspan="8">
         <div class="profile-header-container">
-          <h1 class="profile-header">{{nomeUsuario}}</h1>
+          <h1 class="profile-header">{{anunciante.nome}}</h1>
           <div class="star-rating">
             <mat-icon *ngFor="let star of stars; let i = index">star</mat-icon>&nbsp;&nbsp;<span style="font-size:20px">{{rating}}</span>
           </div>
@@ -25,10 +25,9 @@
       <mat-grid-tile colspan="8">
         <div style="width: 100%!important;">
           <ul class="profile-info">
-            <li>Endereço</li>
-            <li>Data de cadastro</li>
-            <li>Informações</li>
-            <li>Idade</li>
+            <li>E-mail: {{anunciante.email}}</li>
+            <li>Ocupação: {{anunciante.ocupacao}}</li>
+            <li>Telefone: {{anunciante.telefone}}</li>
           </ul>
         </div>
       </mat-grid-tile>
@@ -46,20 +45,16 @@
     <div class="carousel-container">
       <div class="carousel">
         <div class="carousel-item" *ngFor="let item of anuncios; let i = index">
-          <mat-card class="example-card" appearance="outlined" (click)="abreAnuncio()">
-            <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>{{ item.title }}</mat-card-title>
-              <mat-card-subtitle>{{ item.subtitle }}</mat-card-subtitle>
+          <mat-card class="example-card" appearance="outlined">
+            <mat-card-header style="background-color: black; color: white">
+              <div mat-card-avatar class="example-header-image" [ngStyle]="{'background-image': 'url(' + retornaFoto(item.anunciante.foto_de_perfil) + ')'}"></div>
+              <mat-card-title style="color: white">{{ item.tipo }}</mat-card-title>
+              <mat-card-subtitle style="color: white">{{ item.categoria.nome }}</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image [src]="item.image" alt="Imagem do anúncio">
+            <img class="cardAnuncio" mat-card-image [src]="imagemAnuncio(item.foto)" alt="Imagem do anúncio">
             <mat-card-content class="description-content">
-              <p>{{ item.description }}</p>
+              <p>R$ {{item.preco}} - {{item.descricao}}</p>
             </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>LIKE</button>
-              <button mat-button>SHARE</button>
-            </mat-card-actions>
           </mat-card>
         </div>
       </div>
@@ -67,6 +62,56 @@
       <button class="carousel-button left" (click)="moveLeft()">&#10094;</button>
       <button class="carousel-button right" (click)="moveRight()">&#10095;</button>
     </div>
+    <br><br><br>
+
+    <div *ngIf="!visit">
+
+      <mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
+        <mat-grid-tile colspan="12">
+          <h1>Produtos Adquiridos
+          </h1>
+        </mat-grid-tile>
+      </mat-grid-list>
+
+
+          <!-- Carrossel -->
+          <div class="carousel-container">
+            <div class="carousel">
+              <div class="carousel-item" *ngFor="let item of anunciosComprados; let i = index">
+                <mat-card class="example-card" appearance="outlined">
+                  <mat-card-header style="background-color: black; color: white">
+                    <div mat-card-avatar class="example-header-image" [ngStyle]="{'background-image': 'url(' + retornaFoto(item.anunciante.foto_de_perfil) + ')'}"></div>
+                    <mat-card-title style="color: white">{{ item.tipo }}</mat-card-title>
+                    <mat-card-subtitle style="color: white">{{ item.categoria.nome }}</mat-card-subtitle>
+                  </mat-card-header>
+                  <img class="cardAnuncio" mat-card-image [src]="imagemAnuncio(item.foto)" alt="Imagem do anúncio">
+                  <mat-card-content class="description-content">
+                    <p>R$ {{item.preco}} - {{item.descricao}}</p>
+                  </mat-card-content>
+                </mat-card>
+              </div>
+            </div>
+            <!-- Setas de Navegação -->
+            <button class="carousel-button left" (click)="moveLeft()">&#10094;</button>
+            <button class="carousel-button right" (click)="moveRight()">&#10095;</button>
+          </div>
+
+          <div *ngIf="anunciosComprados.length == 0">
+            <mat-grid-list cols="12" rowHeight="50px">
+              <mat-grid-tile colspan="12">
+                <h2> Nenhum produto adquirido ainda </h2>
+              </mat-grid-tile>
+            </mat-grid-list>
+
+          </div>
+          <br><br>
+
+    </div>
+
+
+
+
 
   </mat-card>
 </div>
+
