--- a/frontend/src/app/myAdds/myAdds.component.html
+++ b/frontend/src/app/myAdds/myAdds.component.html
@@ -1,4 +1,5 @@
-<mat-card class="card-container">
+
+  <mat-card class="card-container">
 
 
     <mat-grid-list cols="12" rowHeight="80px" gutterSize="20px">
@@ -40,8 +41,8 @@
                   <p>R$ {{item.preco}} - {{item.descricao}}</p>
                 </mat-card-content>
                 <mat-card-actions>
-                  <button mat-button style="background-color: rgb(73, 117, 199);color:white;margin-right:5px" (click)="editarAnuncio(item)">EDITAR</button>
-                  <button mat-button style="background-color: rgb(100, 25, 25);color:white" (click)="excluirAnuncio(item)">EXCLUIR</button>
+                  <button mat-button class="bt-like" (click)="editarAnuncio(item)">EDITAR</button>
+                  <button mat-button class="bt-share" (click)="excluirAnuncio(item)">EXCLUIR</button>
                 </mat-card-actions>
               </mat-card>
             </div>
@@ -56,5 +57,6 @@
 
 
 </mat-card>
+
 
 
