--- a/frontend/src/app/shared/dialogGenerico/dialogGenerico.component.css
+++ b/frontend/src/app/shared/dialogGenerico/dialogGenerico.component.css
@@ -9,31 +9,31 @@
     display: flex;
     flex-direction: column;
   }
-  
+
   .alert-title {
     font-size: 24px;
     font-weight: bold;
     color: #ff0000;
     margin-bottom: 10px;
   }
-  
+
   .alert-message {
     font-size: 16px;
     margin-bottom: 20px;
     color: #333;
   }
-  
+
   .category-list-container {
     max-height: 200px; /* Limite a altura da lista */
     overflow-y: auto;  /* Permite rolagem vertical quando necessário */
     margin-top: 10px;  /* Espaço entre a mensagem e a lista */
   }
-  
+
   .category-list {
     list-style-type: none;
     padding: 0;
   }
-  
+
   .category-list li {
     font-size: 14px;
     color: #555;
@@ -42,5 +42,22 @@
     background-color: #f1f1f1;
     border-radius: 5px;
   }
-  
-  
+
+  .stars {
+    display: flex;
+    cursor: pointer;
+  }
+
+  .star {
+    font-size: 40px;
+    color: gray;
+    transition: color 0.2s ease;
+  }
+
+  .star.selected {
+    color: gold;
+  }
+
+  h2 {
+    margin-bottom: 10px;
+  }
